[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.diesel]
version = "2.0.2"
features = ["postgres", "r2d2", "chrono", "numeric", "serde_json"]

[dependencies.diesel_migrations]
version = "2.0.0"
features = ["postgres"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.tokio]
version = "1.24.1"
features = ["full"]

[dependencies]
config = {path="../config"}

chrono = "0.4.23"
toml = "0.5.9"
url = "2.3.1"
thiserror = "1.0.38"
serde_json = "1.0.91"
async-trait = "0.1.61"

