[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies.tokio]
version = "1.24.1"
features = ["full"]

[dependencies]
config = { path = "../config" }
database = { path = "../database" }
indexer = { path = "../indexer" }
dotenv = "0.15.0"
crossbeam-channel = "0.5.6"
thiserror = "1.0.38"
futures = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"